changed price format in kids.html

--- a/categories pages/kids.html
+++ b/categories pages/kids.html
@@ -434,7 +434,7 @@
     <img src="./images/clothes17.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -452,7 +452,7 @@
     <img src="./images/clothes9.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 1499/-</p>
+      <p class="card-price">Price 999/- Only-</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -479,7 +479,7 @@
     <img src="./images/clothes12.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 899/-</p>
+      <p class="card-price">Price 999/- Only-</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -506,7 +506,7 @@
     <img src="./images/clothes15.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 3199/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -578,7 +578,7 @@
     <img src="./images/clothes23.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 1299/-</p>
+      <p class="card-price">Price 999/- Only-</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -605,7 +605,7 @@
     <img src="./images/clothes26.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -722,7 +722,7 @@
     <img src="./images/clothes39.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 1499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -758,7 +758,7 @@
     <img src="./images/clothes43.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 1499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -839,7 +839,7 @@
     <img src="./images/clothes22.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 1999/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="buy-button">Add to cart</button>
     </div>
