--- a/categories pages/kids.html
+++ b/categories pages/kids.html
@@ -361,7 +361,7 @@
             <img src="./images/clothes1.jpg" alt="Kid's Wear">
             <div class="card-content">
               <h2 class="card-title">Kid's Wear</h2>
-              <p class="card-price">Price rs 499/-</p>
+              <p class="card-price">Price 999/- Only</p>
               <button class="buy-button">Buy Now</button>
               <button class="Add-to-cart">Add to cart</button>
             </div>
@@ -371,7 +371,7 @@
         <img src="./images/clothes2.jpg" alt="Kid's Wear 1">
         <div class="card-content">
           <h2 class="card-title">Kid's Wear </h2>
-          <p class="card-price">Price rs 1499/-</p>
+          <p class="card-price">Price 999/- Only</p>
           <button class="buy-button">Buy Now</button>
           <button class="Add-to-cart">Add to cart</button>
         </div>
@@ -380,7 +380,7 @@
     <img src="./images/clothes3.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 899/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -389,7 +389,7 @@
     <img src="./images/clothes4.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -398,7 +398,7 @@
     <img src="./images/clothes5.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 999/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -407,7 +407,7 @@
     <img src="./images/clothes16.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 599/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -416,7 +416,7 @@
     <img src="./images/clothes6.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -425,7 +425,7 @@
     <img src="./images/clothes7.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 999/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -443,7 +443,7 @@
     <img src="./images/clothes8.jpg" alt="Kid's Wear">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 799/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -461,7 +461,7 @@
     <img src="./images/clothes10.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 459/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -470,7 +470,7 @@
     <img src="./images/clothes11.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 799/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -488,7 +488,7 @@
     <img src="./images/clothes13.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -497,7 +497,7 @@
     <img src="./images/clothes14.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -794,7 +794,7 @@
     <img src="./images/clothes47.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 1299/-</p>
+      <p class="card-price">Price 999/- Only-</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -803,7 +803,7 @@
     <img src="./images/clothes48.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -812,7 +812,7 @@
     <img src="./images/clothes49.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 1499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -821,7 +821,7 @@
     <img src="./images/clothes10.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">PPrice 999/- Onlyice rs 499/-</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -830,7 +830,7 @@
     <img src="./images/clothes31.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 999/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
