changes in cards

--- a/categories pages/kids.html
+++ b/categories pages/kids.html
@@ -515,7 +515,7 @@
     <img src="./images/clothes17.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 2399/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -533,7 +533,7 @@
     <img src="./images/clothes18.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -542,7 +542,7 @@
     <img src="./images/clothes19.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -551,7 +551,7 @@
     <img src="./images/clothes20.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -560,7 +560,7 @@
     <img src="./images/clothes21.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 699/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -569,7 +569,7 @@
     <img src="./images/clothes22.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 1399/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -587,7 +587,7 @@
     <img src="./images/clothes24.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -596,7 +596,7 @@
     <img src="./images/clothes25.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 1499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -614,7 +614,7 @@
     <img src="./images/clothes27.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 399/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -623,7 +623,7 @@
     <img src="./images/clothes28.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 999/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -641,7 +641,7 @@
     <img src="./images/clothes31.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 899/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -650,7 +650,7 @@
     <img src="./images/clothes31.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -659,7 +659,7 @@
     <img src="./images/clothes32.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -677,7 +677,7 @@
     <img src="./images/clothes34.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -686,7 +686,7 @@
     <img src="./images/clothes35.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 569/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -695,7 +695,7 @@
     <img src="./images/clothes36.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 789/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -704,7 +704,7 @@
     <img src="./images/clothes37.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -713,7 +713,7 @@
     <img src="./images/clothes38.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 1499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -731,7 +731,7 @@
     <img src="./images/clothes40.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear 1</h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -740,7 +740,7 @@
     <img src="./images/clothes41.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 1599/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -749,7 +749,7 @@
     <img src="./images/clothes42.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear</h2>
-      <p class="card-price">Price rs 789/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -767,7 +767,7 @@
     <img src="./images/clothes44.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 2399/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -776,7 +776,7 @@
     <img src="./images/clothes45.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 2329/-</p>
+      <p class="card-price">Price 999/- Only-</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -785,7 +785,7 @@
     <img src="./images/clothes46.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">Price rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
@@ -821,7 +821,7 @@
     <img src="./images/clothes10.jpg" alt="Kid's Wear 1">
     <div class="card-content">
       <h2 class="card-title">Kid's Wear </h2>
-      <p class="card-price">PPrice 999/- Onlyice rs 499/-</p>
+      <p class="card-price">Price 999/- Only</p>
       <button class="buy-button">Buy Now</button>
       <button class="Add-to-cart">Add to cart</button>
     </div>
