--- a/categories pages/kids.html
+++ b/categories pages/kids.html
@@ -331,7 +331,7 @@
           <img src="./images/user.png" class="profile" />
       </a>
 
-      <a href="./index.html">
+      <a href="../index.html">
           <img src="./images/home.png" class="home" />
       </a>
       <form id="form">
