changes in search bar

--- a/categories pages/winter.html
+++ b/categories pages/winter.html
@@ -62,6 +62,23 @@
     color: white;
     margin-left: 90%;
 }
+.search-bar {
+    width: 280px;
+    height: 33px;
+    border-color: black;
+    border-style: solid;
+    border-radius: 3px;
+}
+
+.search-button {
+    height: 33px;
+    width: 80px;
+    margin-left: px;
+    margin-right: 50px;
+    border-color: black;
+    border-style: solid;
+    border-radius: 3px;
+}
       body {
         font-family: Arial, sans-serif;
         margin: 0;
