--- a/categories pages/winter.html
+++ b/categories pages/winter.html
@@ -3,6 +3,10 @@
   <head>
     <title>Kids Wear</title>
     <style>
+      *{
+        margin: 0px;
+        padding: 0px;
+      }
         .navbar {
     background-color: rgb(21, 21, 111);
     height: 60px;
@@ -90,7 +94,7 @@
        font-family: Georgia, 'Times New Roman', Times, serif;
         text-align: center;
         border-radius: 10px 10px 10px 10px;
-        box-shadow: #a451a2 2px 2px 2px 2px;
+        box-shadow: #525aa7 2px 2px 2px 2px;
         border: solid black 2px;
       }
       h1 {
@@ -322,6 +326,49 @@
     text-decoration: none !important;
     color: white;
 }
+.backend-1-div {
+            background-color: rgb(243, 232, 177);
+            margin-top: 50px;
+            width: 55%;
+            margin-left: auto;
+            margin-right: auto;
+            border-style: solid;
+            border-width: 4px;
+            border-radius: 20px;
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-top: 10px;
+            padding-bottom: 50px;
+            box-shadow: 5px 5px 5px 5px #736a6a;
+         
+        }
+        .payment{
+            margin-left: 60px;
+        }
+        .shoping{
+            margin-left: 60px;
+        }
+        .cancle{
+        
+            background-color: rgb(194, 38, 137);
+            color: white;
+            height: 50px;
+            width: 150px;
+            margin-top: 10px;
+            margin-left: 40px;
+            border-radius: 7px;
+        }
+        .place-order{
+            border-radius: 7px;
+            background-color: rgb(194, 38, 137);
+            color: white;
+            height: 50px;
+            width: 150px;
+            margin-top: 10px;
+            margin-left: 120px;
+            margin-right: auto;
+        }
+
     </style>
   </head>
   <body>
