--- a/categories pages/kids.html
+++ b/categories pages/kids.html
@@ -90,7 +90,7 @@
         font-family: Georgia, 'Times New Roman', Times, serif;
         text-align: center;
         border-radius: 10px 10px 10px 10px;
-        box-shadow: #a451a2 2px 2px 2px 2px;
+        box-shadow: #900d8e 2px 2px 2px 2px;
         border: solid black 2px;
       
       }
@@ -120,7 +120,7 @@
         justify-items: center;
         box-shadow:  2px 2px 2px 2px#e67fe0;
         width: 150px;
-        height: 180px;
+        height: 200px;
       }
       .card-content {
         padding: 6px;
