--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -637,3 +637,35 @@
     </div>
   </div>
   </div>
+
+  <div class="footer">
+    <h2 class="about">CONTACT</h2><br>
+    <p class="about-list">
+      <a href="mailto:tinukohare@gmail.com" class="anc">
+        <img src="./images/email.png" height="30px" alt="E-mail" /> E-mail: rtcfashionclub@gmail.com
+      </a><br>
+      <a href="tel:+91-8459562384" class="anc">
+        <img src="./images/call.png" height="30px" alt="Call" />
+        <h class="call">Call: +91 8459562384<br>
+      </a>
+
+      <a href="https://goo.gl/maps/XYayxp7jYfVYHPRCA" class="anc">
+        <img src="./images/location.png" height="30px" /> Address: Nagpur
+      </a><br>
+    </p>
+
+
+    <h2 class="help"> HELP</h2>
+    <p class="help-list">Payments<br> Shiping <br>Customer Service <br> FAQ</p>
+
+    <h2 class="policy"> POLICY</h2>
+    <p class="policy-list">Return Policy<br>Terms Of Use <br> Security <br> Privacy</p>
+
+
+    <h2 class="social"> SOCIAL</h2>
+    <p class="social-list">Facebook<br>Twitter <br>You Tube</p>
+  </div>
+
+</body>
+
+</html>
