jacket images added

--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -4,7 +4,7 @@
 <head>
   <title>Kids Wear</title>
   <style>
-    * 1{
+    *{
       margin: 0px;
       padding: 0px;
     }
@@ -386,7 +386,7 @@
 
 
   <div class="card">
-    <img src="./ethenics/jacket/j1.png" alt="winter wear">
+    <img src="./images/jacket/jacket1.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -396,7 +396,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./ethenics/shirts/sh1.png" alt="winter wear">
+    <img src="./images/jacket/jacket2.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -406,7 +406,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./ethenics/tops/t.png" alt="winter wear">
+    <img src="./images/jacket/jacket3.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -416,7 +416,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./ethenics/jacket/jacket3.png" alt="winter wear">
+    <img src="./images/jacket/jacket4.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -426,7 +426,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter5.jpg" alt="winter wear">
+    <img src="./images/jacket/jacket5.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -436,7 +436,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter6.jpg" alt="winter wear">
+    <img src="./images/jacket/jacket6.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -446,7 +446,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter7.jpg" alt="winter wear">
+    <img src="./images/jacket/jacket7.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -456,7 +456,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter8.jpg" alt="winter wear">
+    <img src="./images/jacket/jacket8.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -466,7 +466,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter9.jpg" alt="winter wear">
+    <img src="./images/jacket/jacket9.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -476,7 +476,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter10.jpg" alt="winter wear">
+    <img src="./images/jacket/jacket10.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -486,7 +486,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter11.jpg" alt="winter wear">
+    <img src="./images/jacket/jacket11.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -496,7 +496,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter12.jpg" alt="winter wear">
+    <img src="./images/jacket/jacket12.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -506,7 +506,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter13.jpg" alt="winter wear">
+    <img src="./images/jacket/jacket13.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -516,7 +516,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter14.jpg" alt="winter wear">
+    <img src="./images/jacket/jacket14.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -526,7 +526,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter15.jpg" alt="winter wear">
+    <img src="./images/jacket/jacket15.png"alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -536,7 +536,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter16.jpg" alt="winter wear">
+    <img src="./images/jacket/jacket16.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -546,7 +546,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter17.jpg" alt="winter wear">
+    <img src="images/jacket/j1.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
