shirt images added

--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -546,7 +546,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="images/jacket/j1.png" alt="winter wear">
+    <img src="./images/shirts/sh1.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -556,7 +556,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter18.jpg" alt="winter wear">
+    <img src="./images/shirts/shirt1.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -566,7 +566,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter19.jpg" alt="winter wear">
+    <img src="./images/shirts/shirt2.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -576,7 +576,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter20.jpg" alt="winter wear">
+    <img src="./images/shirts/shirt3.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -586,7 +586,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter21.jpg" alt="winter wear">
+    <img src="./images/shirts/shirt4.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -596,7 +596,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter22.jpg" alt="winter wear">
+    <img src="./images/shirts/shirt5.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -606,7 +606,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter23.jpg" alt="winter wear">
+    <img src="./images/shirts/shirt6.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -616,7 +616,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter24.jpg" alt="winter wear">
+    <img src="./images/shirts/shirt7.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -626,7 +626,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter25.jpg" alt="winter wear">
+    <img src="./images/shirts/shirt8.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -636,7 +636,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter26.jpg" alt="winter wear">
+    <img src="./images/shirts/shirt9.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -646,7 +646,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter27.jpg" alt="winter wear">
+    <img src="./images/shirts/shirt10.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -656,7 +656,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter28.jpg" alt="winter wear">
+    <img src="./images/shirts/shirt11.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -666,7 +666,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter29.jpg" alt="winter wear">
+    <img src="./images/shirts/shirt12.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -676,7 +676,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter30.jpg" alt="winter wear">
+    <img src="./..............." alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
