tshirt images added

--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -676,7 +676,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./..............." alt="winter wear">
+    <img src="./images/tshirt/T.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -686,7 +686,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter31.jpg" alt="winter wear">
+    <img src="./images/tshirt/tshirt1.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -696,7 +696,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter32.jpg" alt="winter wear">
+    <img src="./images/tshirt/tshirt2.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -706,7 +706,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter33.jpg" alt="winter wear">
+    <img src="./images/tshirt/tshirt3.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -716,7 +716,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter34.jpg" alt="winter wear">
+    <img src="./images/tshirt/tshirt4.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -726,7 +726,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter35.jpg" alt="winter wear">
+    <img src="./images/tshirt/tshirt5.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -736,7 +736,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter36.jpg" alt="winter wear">
+    <img src="./images/tshirt/tshirt6.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -746,7 +746,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter37.jpg" alt="winter wear">
+    <img src="./images/tshirt/tshirt7.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -756,7 +756,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter38.jpg" alt="winter wear">
+    <img src="./images/tshirt/tshirt8.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -766,7 +766,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter39.jpg" alt="winter wear">
+    <img src="./images/tshirt/tshirt9.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -776,7 +776,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter40.jpg" alt="winter wear">
+    <img src="./........" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
