top images added

--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -776,7 +776,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./........" alt="winter wear">
+    <img src="./images/tops/t.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -786,7 +786,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter41.jpg" alt="winter wear">
+    <img src="./images/tops/to5.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -796,7 +796,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter42.jpg" alt="winter wear">
+    <img src="./images/tops/top1.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -806,7 +806,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter43.jpg" alt="winter wear">
+    <img src="./images/tops/top2.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -816,7 +816,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter44.jpg" alt="winter wear">
+    <img src="./images/tops/top3.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -826,7 +826,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter45.jpg" alt="winter wear">
+    <img src="./images/tops/top4.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -836,7 +836,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter46.jpg" alt="winter wear">
+    <img src="./images/tops/top5.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -846,7 +846,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter47.jpg" alt="winter wear">
+    <img src="./images/tops/top6.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -856,7 +856,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter48.jpg" alt="winter wear">
+    <img src="./images/tops/top7.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -866,7 +866,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter49.jpg" alt="winter wear">
+    <img src="./images/tops/top8.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -876,7 +876,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter50.jpg" alt="winter wear">
+    <img src="./images/tops/top9.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -886,7 +886,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter1.jpg" alt="winter wear">
+    <img src="./images/tops/top10.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -896,7 +896,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter51.jpg" alt="winter wear">
+    <img src=".................." alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
